test/classes/initializers/generics/phase1/badDependence.good
badDependence.chpl:7: In initializer:
badDependence.chpl:8: error: Field "f5" used before it is initialized
